<resources>
    <string name="app_name">Alcohall</string>
    <string name="ingredients">Ingredients</string>
    <string name="add_ingredient_plus">+</string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="find_recipes">Find recipes</string>
    <string name="clear_ingredients">Clear</string>
    <string name="find_ingredients_input">Input ingredient name</string>
    <string name="back_button">back</string>
    <string name="add_page_name">Add</string>
    <string name="no_chosen_error">No ingredients chosen!</string>
    <string name="no_chosen_help">Click plus button on right bottom corner to add ingredient</string>
    <string name="no_results">No results</string>
    <string name="new_ingredient">New ingredient</string>
    <string name="ingredient_name">Ingredient name</string>
    <string name="remove_ingredient">Remove selected ingredient from list</string>
    <string name="toolbar_logo">toolbar logo</string>
    <string name="recipes">Recipes</string>
    <string name="consist">Сonsist</string>
    <string name="tools">Tools</string>
    <string name="steps">Recipe</string>
    <string name="no_recipe_found">No recipes found!</string>
    <string name="without_auth">Continue without signing in</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="email">Email</string>
    <string name="register">Registration</string>
    <string name="login">Login</string>
    <string name="cocktail_like">Add cocktail to favourites</string>
    <string name="selections">Selections</string>
    <string name="nav_search">Search</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_selections">Selections</string>
    <string name="nav_profile">Profile</string>
    <string name="email_exists">User with this email already exists</string>
    <string name="error_auth_text_view">Something went wrong</string>
    <string name="cocktail_image">Cocktail image</string>
    <string name="likes">Likes</string>
    <string name="no_likes_found">No likes found</string>
    <string name="not_autorized">You are not autorised</string>
    <string name="profile">Profile</string>
    <string name="profile_email">Email:</string>
    <string name="profile_first_name">First name:</string>
    <string name="profile_last_name">Last name:</string>
    <string name="logout">Log out</string>
    <string name="no_connection">No internet connection!</string>
</resources>