<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_search"
        android:enabled="true"
        android:icon="?android:attr/actionModeWebSearchDrawable"
        android:title="@string/nav_search" />
    <item
        android:id="@+id/page_favorites"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/nav_favorites" />
    <item
        android:id="@+id/page_selections"
        android:enabled="true"
        android:icon="?attr/actionModeCopyDrawable"
        android:title="@string/nav_selections" />
    <item
        android:id="@+id/page_profile"
        android:enabled="true"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/nav_profile" />
</menu>