<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient"
    android:padding="@dimen/main_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textAppearance="?attr/textAppearanceHeadline4"
        android:textColor="@color/colorAccent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_email"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/user_email_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/main_margin"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="@color/colorPrimaryDark" />
    </LinearLayout>

    <TextView
        android:id="@+id/error_profile_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/error_auth_text_view"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <Button
            android:id="@+id/logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="false"
            android:text="@string/logout"
            android:layout_margin="@dimen/main_margin"/>
    </RelativeLayout>

</LinearLayout>