<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/to_register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:enabled="false"
            android:text="@string/register"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/to_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login"
            android:textColor="@color/colorAccent" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/auth_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    <TextView
        android:id="@+id/error_auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/error_auth_text_view"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:visibility="gone" />

</LinearLayout>