<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_shadow_start_color"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/main_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/min_margin"
            android:text="@string/no_chosen_error"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceHeadline4"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_chosen_help"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/back_from_no_result_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_margin"
            android:text="@string/back_button" />

    </LinearLayout>

</RelativeLayout>