<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logoXmarks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/min_margin"
            android:layout_marginBottom="@dimen/min_margin"
            android:adjustViewBounds="true"
            android:contentDescription="@string/toolbar_logo"
            android:src="@drawable/toolbar_logo" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/to_register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:enabled="false"
            android:text="@string/register"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/to_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login"
            android:textColor="@color/colorAccent" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/auth_layout"
        >
    </FrameLayout>
    <TextView
        android:id="@+id/error_auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center" android:text="Ошибка! Что-то пошло не так!"
        android:visibility="gone"
        android:textColor="@color/colorAccent"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/without_auth_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/without_auth"
            android:textColor="@color/colorAccent" />
    </RelativeLayout>


</LinearLayout>