<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/main_margin"
        android:layout_marginEnd="@dimen/main_margin"
        android:layout_marginTop="@dimen/main_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:layout_marginBottom="@dimen/min_margin"
                android:text="@string/ingredients"
                android:textAppearance="?attr/textAppearanceHeadline4"
                android:textColor="@color/colorAccent" />

            <Button
                android:id="@+id/add_ingrediets_button"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/add_ingredient"
                android:textColor="@color/colorAccent"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:textSize="30sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/min_margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_first_ingredient"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="@color/colorAccent" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="@dimen/min_margin">

        <Button
            android:id="@+id/find_recipes_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/main_margin"
            android:layout_marginEnd="@dimen/main_margin"
            android:text="@string/find_recipes"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/clear_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_ingredients"
            android:textColor="@color/colorAccent"/>

    </LinearLayout>
    <FrameLayout
        android:id="@+id/layout_for_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</RelativeLayout>