<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextField_login"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/min_margin"
        android:background="@color/colorAccent"
        android:hint="@string/email"
        android:textColorHint="@color/colorAccent">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditField_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textColor="@color/colorAccent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextField_login"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/min_margin"
        android:background="@color/colorAccent"
        android:hint="@string/password"
        android:textColorHint="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditField_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textColor="@color/colorAccent" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/min_margin"
        android:gravity="center"
        android:text="@string/login" />

</LinearLayout>