<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/min_margin"
            android:text="@string/add_page_name"
            android:textAppearance="?attr/textAppearanceHeadline4"
            android:textColor="@color/colorAccent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/searchIngredientTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/min_margin"
            android:background="@color/colorAccent"
            android:hint="@string/ingredient_name"
            app:endIconDrawable="@drawable/ic_search_24px"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/searchIngredientEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/add_ingredient_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <!--<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/min_margin"
            android:text="@string/no_results"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textColor="@color/colorAccent" />-->
    </LinearLayout>

    <Button
        android:id="@+id/back_from_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/main_margin"
        android:text="@string/back_button" />

</RelativeLayout>