<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/main_margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/min_margin"
            android:text="@string/add_page_name"
            android:textAppearance="?attr/textAppearanceHeadline4"
            android:textColor="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/editIngredientName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPersonName"
                android:layout_margin="@dimen/min_margin"
                android:background="@color/colorAccent"
                android:padding="@dimen/main_padding"
                android:text="@string/find_ingredients_input" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/search_ingredient_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:clickable="true"
                android:focusable="auto"
                app:backgroundTint="@color/colorAccent"
                app:srcCompat="@android:drawable/ic_menu_search" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/min_margin"
            android:text="No results"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textColor="@color/colorAccent" />
    </LinearLayout>

    <Button
        android:id="@+id/back_from_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_margin"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/back_button" />

</RelativeLayout>