<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar">

        <ImageView
            android:id="@+id/logoXmarks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/min_margin"
            android:layout_marginTop="@dimen/min_margin"
            android:adjustViewBounds="true"
            android:src="@drawable/toolbar_logo"
            android:contentDescription="@string/toolbar_logo" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="111"
        android:layout_marginTop="@dimen/main_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/add_ingredient_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/main_margin"
                android:layout_marginBottom="@dimen/main_margin"
                android:layout_weight="5"
                android:text="@string/ingredients"
                android:textAppearance="?attr/textAppearanceHeadline4"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/min_margin"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ingredient_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/add_first_ingredient_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/main_margin"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/add_first_ingredient"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="@color/colorAccent" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/min_margin"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/find_recipes_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/main_margin"
            android:layout_marginEnd="@dimen/main_padding"
            android:paddingTop="@dimen/main_padding"
            android:paddingBottom="@dimen/main_padding"
            android:text="@string/find_recipes"
            android:textSize="24sp"
            app:cornerRadius="20dp" />

        <Button
            android:id="@+id/clear_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_ingredients"
            android:textColor="@color/colorAccent" />
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:menu="@menu/bottom_navigation_menu" />
</LinearLayout>